--- a/app/src/main/res/navigation/nav_user.xml
+++ b/app/src/main/res/navigation/nav_user.xml
@@ -10,13 +10,6 @@
         android:name="kz.busjol.ui.user.UserFragment"
         tools:layout="@layout/fragment_user" >
         <action
-            android:id="@+id/action_navigation_user_to_aboutAppFragment"
-            app:destination="@id/aboutAppFragment"
-            app:popEnterAnim="@anim/slide_in_left"
-            app:popExitAnim="@anim/slide_out_right"
-            app:enterAnim="@anim/slide_in_right"
-            app:exitAnim="@anim/slide_out_left"/>
-        <action
             android:id="@+id/action_navigation_user_to_changeLanguageFragment"
             app:destination="@id/changeLanguageFragment"
             app:popEnterAnim="@anim/slide_in_left"
@@ -26,13 +19,10 @@
         <action
             android:id="@+id/action_navigation_user_to_enterUserDialog"
             app:destination="@id/enterUserDialog" />
+        <action
+            android:id="@+id/action_navigation_user_to_rateAppDialog"
+            app:destination="@id/rateAppDialog" />
     </fragment>
-
-    <fragment
-        android:id="@+id/aboutAppFragment"
-        android:name="kz.busjol.ui.about_app.AboutAppFragment"
-        android:label="AboutAppFragment"
-        tools:layout="@layout/fragment_about_app"/>
 
     <dialog
         android:id="@+id/changeLanguageFragment"
@@ -45,5 +35,9 @@
         android:name="kz.busjol.ui.enter_user.EnterUserDialog"
         tools:layout="@layout/dialog_enter_user"/>
 
+    <dialog
+        android:id="@+id/rateAppDialog"
+        android:name="kz.busjol.ui.rate_app.RateAppDialog"
+        tools:layout="@layout/dialog_rate_app" />
 
 </navigation>
