--- a/app/src/main/res/layout/fragment_user.xml
+++ b/app/src/main/res/layout/fragment_user.xml
@@ -400,7 +400,7 @@
         android:id="@+id/additional_data"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="@string/about_app_title"
+        android:text="@string/rate_app"
         android:textColor="@color/black"
         android:textSize="@dimen/_13sdp"
         android:layout_marginTop="@dimen/_15sdp"
@@ -426,5 +426,28 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/additional_data" />
+
+    <androidx.appcompat.widget.AppCompatTextView
+        android:id="@+id/busjol_tv"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textSize="@dimen/_20sdp"
+        android:text="@string/app_name"
+        android:textAllCaps="true"
+        android:textColor="@color/black"
+        android:textStyle="bold"
+        app:layout_constraintTop_toBottomOf="@id/view_bottom_additional"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        android:layout_marginTop="@dimen/_10sdp"/>
+
+    <androidx.appcompat.widget.AppCompatTextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:layout_constraintTop_toBottomOf="@id/busjol_tv"
+        app:layout_constraintStart_toStartOf="@id/busjol_tv"
+        app:layout_constraintEnd_toEndOf="@id/busjol_tv"
+        android:text="Версия 1.00"
+        android:textSize="@dimen/_10sdp"/>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
