--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -53,4 +53,8 @@
         <item name="android:background">@color/white</item>
     </style>
 
+    <style name="TabLayoutTabTheme" parent="TextAppearance.Design.Tab">
+        <item name="textAllCaps">false</item>
+    </style>
+
 </resources>
