--- a/app/src/main/res/layout/fragment_passenger_data.xml
+++ b/app/src/main/res/layout/fragment_passenger_data.xml
@@ -78,7 +78,7 @@
         android:textSize="11sp"/>
 
     <androidx.appcompat.widget.AppCompatTextView
-        android:id="@+id/trip_time"
+        android:id="@+id/trip_start_time"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         tools:text="09:00"
