--- a/app/src/main/res/layout/fragment_trip.xml
+++ b/app/src/main/res/layout/fragment_trip.xml
@@ -6,13 +6,21 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools">
 
+    <androidx.appcompat.widget.Toolbar
+        android:id="@+id/toolbar"
+        android:layout_width="match_parent"
+        android:background="@color/white"
+        android:layout_height="@dimen/_60sdp"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintStart_toStartOf="parent"/>
+
     <androidx.appcompat.widget.AppCompatImageView
         android:id="@+id/back_button"
         android:layout_width="@dimen/_29sdp"
         android:layout_height="@dimen/_29sdp"
         android:src="@drawable/ic_button_back"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="@id/toolbar"
+        app:layout_constraintStart_toStartOf="@id/toolbar"
         android:layout_marginTop="@dimen/_16sdp"
         android:layout_marginStart="@dimen/_19sdp"/>
 
@@ -29,18 +37,87 @@
         android:textColor="@color/bolder_text"
         android:textStyle="bold"/>
 
+    <androidx.appcompat.widget.LinearLayoutCompat
+        android:id="@+id/card_layout"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="vertical"
+        android:gravity="center"
+        android:layout_marginStart="@dimen/_10sdp"
+        android:layout_marginEnd="@dimen/_10sdp"
+        android:layout_marginTop="@dimen/_15sdp"
+        android:background="@color/white"
+        android:paddingTop="@dimen/_5sdp"
+        android:paddingBottom="@dimen/_5sdp"
+        app:layout_constraintTop_toBottomOf="@id/toolbar"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent">
+
+        <androidx.appcompat.widget.AppCompatTextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/seat_type_subtitle"
+            android:layout_gravity="start"
+            android:textStyle="bold"
+            android:textSize="@dimen/_9sdp"
+            android:paddingBottom="@dimen/_7sdp"
+            android:layout_marginStart="@dimen/_10sdp"/>
+
+        <RadioGroup
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            app:cardCornerRadius="12dp"
+            android:gravity="center"
+            android:orientation="horizontal">
+
+            <RadioButton
+                android:id="@+id/all_button"
+                android:layout_width="@dimen/_90sdp"
+                android:layout_height="@dimen/_27sdp"
+                android:text="Все"
+                android:textColor="@drawable/radio_button_text_color"
+                android:gravity="center"
+                android:background="@drawable/bg_dec_radio_button"
+                android:checked="true"
+                android:button="@null" />
+
+            <RadioButton
+                android:id="@+id/lying_place_button"
+                android:layout_width="@dimen/_90sdp"
+                android:layout_height="@dimen/_27sdp"
+                android:text="Лежачий"
+                android:textColor="@drawable/radio_button_text_color"
+                android:layout_marginStart="@dimen/_5sdp"
+                android:gravity="center"
+                android:background="@drawable/bg_dec_radio_button"
+                android:button="@null" />
+
+            <RadioButton
+                android:id="@+id/seat_place_button"
+                android:layout_width="@dimen/_90sdp"
+                android:layout_height="@dimen/_27sdp"
+                android:text="Сидячий"
+                android:textColor="@drawable/radio_button_text_color"
+                android:layout_marginStart="@dimen/_5sdp"
+                android:gravity="center"
+                android:background="@drawable/bg_dec_radio_button"
+                android:button="@null" />
+
+        </RadioGroup>
+
+    </androidx.appcompat.widget.LinearLayoutCompat>
+
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/rv_trip"
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:layout_marginTop="@dimen/_25sdp"
-        android:layout_marginBottom="@dimen/_5sdp"
+        android:layout_marginBottom="@dimen/_10sdp"
         android:clipToPadding="false"
-        android:overScrollMode="never"
+        android:nestedScrollingEnabled="false"
         android:paddingHorizontal="@dimen/_11sdp"
-        app:layout_constraintTop_toBottomOf="@id/title_trip"
-        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintBottom_toBottomOf="parent"
-        tools:listitem="@layout/item_trip"/>
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        tools:listitem="@layout/item_trip" app:layout_constraintTop_toBottomOf="@+id/card_layout"/>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
