--- a/app/src/main/res/layout/item_trip.xml
+++ b/app/src/main/res/layout/item_trip.xml
@@ -16,115 +16,150 @@
         <androidx.appcompat.widget.AppCompatImageView
             android:id="@+id/icon_trip_bus"
             android:layout_width="@dimen/_18sdp"
-            android:layout_height="@dimen/_19sdp"
-            android:layout_marginTop="@dimen/_22sdp"
-            android:layout_marginStart="@dimen/_23sdp"
+            android:layout_height="@dimen/_18sdp"
+            android:layout_marginTop="@dimen/_10sdp"
+            android:layout_marginStart="@dimen/_10sdp"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
             android:src="@drawable/ic_icon_bus"/>
 
         <androidx.appcompat.widget.AppCompatTextView
-            android:id="@+id/trip_time"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:textSize="@dimen/_10sdp"
-            android:textColor="@color/bold_text"
-            android:gravity="center"
-            android:layout_marginTop="@dimen/_10sdp"
-            app:layout_constraintStart_toStartOf="@id/icon_trip_bus"
-            app:layout_constraintEnd_toEndOf="@id/icon_trip_bus"
-            app:layout_constraintTop_toBottomOf="@id/icon_trip_bus"
-            tools:text="09:00"/>
-
-        <androidx.appcompat.widget.AppCompatTextView
-            android:id="@+id/trip_date"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:textSize="@dimen/_10sdp"
-            android:textColor="@color/bold_text"
-            android:gravity="center"
-            android:layout_marginTop="@dimen/_2sdp"
-            app:layout_constraintStart_toStartOf="@id/icon_trip_bus"
-            app:layout_constraintEnd_toEndOf="@id/icon_trip_bus"
-            app:layout_constraintTop_toBottomOf="@id/trip_time"
-            tools:text="24.12.2021"/>
-
-        <androidx.appcompat.widget.AppCompatTextView
             android:id="@+id/trip_number"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:textSize="@dimen/_10sdp"
-            android:textColor="@color/bolder_text"
-            android:gravity="start"
-            android:layout_marginTop="@dimen/_8sdp"
-            android:layout_marginStart="@dimen/_29sdp"
-            app:layout_constraintTop_toTopOf="parent"
+            android:layout_marginStart="@dimen/_15sdp"
+            android:gravity="center"
+            android:layout_marginBottom="@dimen/_10sdp"
+            android:textColor="@color/gray_text"
+            android:textSize="@dimen/_8sdp"
+            app:layout_constraintBottom_toBottomOf="@+id/icon_trip_bus"
             app:layout_constraintStart_toEndOf="@id/icon_trip_bus"
-            tools:text="Рейс №23"/>
-
-        <androidx.appcompat.widget.AppCompatTextView
-            android:id="@+id/trip_direction"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:textSize="@dimen/_13sdp"
-            android:textColor="@color/bolder_text"
-            android:gravity="start"
-            android:layout_marginTop="@dimen/_2sdp"
-            app:layout_constraintStart_toStartOf="@id/trip_number"
-            app:layout_constraintTop_toBottomOf="@id/trip_number"
-            android:textStyle="bold"
-            tools:text="Алматы - НурСултан"/>
-
-        <androidx.appcompat.widget.AppCompatTextView
-            android:id="@+id/trip_type"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:textSize="@dimen/_10sdp"
-            android:textColor="@color/bold_text"
-            android:gravity="start"
-            android:layout_marginTop="@dimen/_5sdp"
-            app:layout_constraintStart_toStartOf="@id/trip_direction"
-            app:layout_constraintTop_toBottomOf="@id/trip_direction"
-            android:text="@string/seat_type"/>
-
-        <androidx.appcompat.widget.AppCompatTextView
-            android:id="@+id/trip_free_seats"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:textSize="@dimen/_10sdp"
-            android:textColor="@color/bold_text"
-            android:gravity="start"
-            android:layout_marginTop="@dimen/_2sdp"
-            app:layout_constraintStart_toStartOf="@id/trip_type"
-            app:layout_constraintTop_toBottomOf="@id/trip_type"
-            android:text="@string/free_seats"/>
+            app:layout_constraintTop_toTopOf="@+id/icon_trip_bus"
+            tools:text="Рейс №23" />
 
         <androidx.appcompat.widget.AppCompatTextView
             android:id="@+id/trip_ferryman"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:textSize="@dimen/_10sdp"
-            android:textColor="@color/bold_text"
             android:gravity="start"
-            android:layout_marginTop="@dimen/_2sdp"
-            app:layout_constraintStart_toStartOf="@id/trip_free_seats"
-            app:layout_constraintTop_toBottomOf="@id/trip_free_seats"
-            android:paddingBottom="@dimen/_7sdp"
-            android:text="@string/carrier"/>
+            android:textStyle="bold"
+            android:layout_marginBottom="10dp"
+            android:textColor="@color/gray_text"
+            app:layout_constraintStart_toStartOf="@id/trip_number"
+            app:layout_constraintTop_toBottomOf="@id/trip_number"
+            tools:text="Автовокзал Алматы"/>
 
         <androidx.appcompat.widget.AppCompatTextView
-            android:id="@+id/trip_price"
+            android:id="@+id/trip_start_time"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:textSize="@dimen/_13sdp"
-            android:textColor="@color/blue_text"
+            android:textColor="@color/black"
             android:textStyle="bold"
+            android:alpha="0.7"
             android:gravity="center"
-            android:layout_marginTop="8dp"
-            android:layout_marginEnd="8dp"
+            android:layout_marginTop="@dimen/_10sdp"
+            app:layout_constraintStart_toStartOf="@id/icon_trip_bus"
+            app:layout_constraintTop_toBottomOf="@id/icon_trip_bus"
+            tools:text="09:00"/>
+
+        <androidx.appcompat.widget.AppCompatTextView
+            android:id="@+id/from_city"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textColor="@color/gray_text"
+            android:textStyle="bold"
+            android:textSize="@dimen/_12sdp"
+            app:layout_constraintStart_toStartOf="@+id/trip_start_time"
+            app:layout_constraintTop_toBottomOf="@+id/trip_start_time"
+            tools:text="Алматы" />
+
+        <androidx.appcompat.widget.AppCompatTextView
+            android:id="@+id/trip_end_time"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:alpha="0.7"
+            android:gravity="center"
+            android:textColor="@color/black"
+            android:textSize="@dimen/_13sdp"
+            android:textStyle="bold"
+            app:layout_constraintBottom_toBottomOf="@+id/trip_start_time"
+            app:layout_constraintStart_toEndOf="@+id/trip_ferryman"
+            app:layout_constraintTop_toTopOf="@+id/trip_start_time"
+            tools:text="14:20" />
+
+        <androidx.appcompat.widget.AppCompatTextView
+            android:id="@+id/to_city"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textColor="@color/gray_text"
+            android:textSize="@dimen/_12sdp"
+            android:textStyle="bold"
+            app:layout_constraintStart_toStartOf="@+id/trip_end_time"
+            app:layout_constraintTop_toBottomOf="@+id/trip_end_time"
+            tools:text="Нур-Султан" />
+
+        <androidx.appcompat.widget.AppCompatTextView
+            android:id="@+id/trip_type"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:gravity="start"
+            android:text="@string/seat_type"
+            android:textColor="@color/bold_text"
+            android:textSize="@dimen/_8sdp"
+            android:layout_marginTop="@dimen/_5sdp"
+            app:layout_constraintStart_toStartOf="@+id/from_city"
+            app:layout_constraintTop_toBottomOf="@+id/from_city" />
+
+        <androidx.appcompat.widget.AppCompatTextView
+            android:id="@+id/trip_free_seats"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textSize="@dimen/_8sdp"
+            android:textColor="@color/bold_text"
+            android:gravity="start"
+            android:layout_marginTop="@dimen/_2sdp"
+            android:paddingBottom="@dimen/_10sdp"
+            app:layout_constraintStart_toStartOf="@id/trip_type"
+            app:layout_constraintTop_toBottomOf="@id/trip_type"
+            android:text="@string/free_seats"/>
+
+        <androidx.appcompat.widget.AppCompatTextView
+            android:id="@+id/trip_price"
+            android:layout_width="@dimen/_70sdp"
+            android:layout_height="@dimen/_25sdp"
+            android:background="#F2F6F8"
+            android:gravity="center"
+            android:textColor="@color/blue_text"
+            android:textSize="@dimen/_13sdp"
+            android:textStyle="bold"
+            android:layout_marginEnd="@dimen/_25sdp"
+            app:layout_constraintBottom_toBottomOf="@+id/trip_free_seats"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            tools:text="2 000〒"/>
+            app:layout_constraintTop_toBottomOf="@+id/from_city"
+            tools:text="2 000〒" />
+
+        <androidx.appcompat.widget.AppCompatImageView
+            android:id="@+id/appCompatImageView5"
+            android:layout_width="@dimen/_10sdp"
+            android:layout_height="@dimen/_10sdp"
+            android:layout_marginEnd="@dimen/_65sdp"
+            android:src="@drawable/wheel"
+            app:layout_constraintBottom_toBottomOf="@+id/trip_number"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toTopOf="@+id/trip_number" />
+
+        <androidx.appcompat.widget.AppCompatTextView
+            android:id="@+id/trip_time_left"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textSize="@dimen/_8sdp"
+            android:layout_marginStart="@dimen/_3sdp"
+            app:layout_constraintBottom_toBottomOf="@+id/appCompatImageView5"
+            app:layout_constraintStart_toEndOf="@+id/appCompatImageView5"
+            app:layout_constraintTop_toTopOf="@+id/appCompatImageView5"
+            tools:text="13ч 20мин" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
