--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -9,6 +9,7 @@
     <color name="white">#FFFFFFFF</color>
     <color name="bold_text">#8B98A7</color>
     <color name="bolder_text">#444444</color>
+    <color name="gray_text">#91A2BF</color>
     <color name="blue_text">#2898FF</color>
     <color name="green_background">#AADB65</color>
     <color name="red_background">#EF4545</color>
