Новые фичи и экраны

--- a/app/src/main/res/layout/dialog_trip_details.xml
+++ b/app/src/main/res/layout/dialog_trip_details.xml
@@ -1,8 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    xmlns:app="http://schemas.android.com/apk/res-auto">
+    android:layout_height="wrap_content"
+    android:paddingBottom="@dimen/_20sdp"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools">
 
     <androidx.appcompat.widget.AppCompatImageView
         android:id="@+id/close_button"
@@ -27,11 +29,156 @@
         android:textStyle="bold"/>
 
     <View
+        android:id="@+id/separator_line"
         android:layout_width="match_parent"
         android:layout_height="@dimen/_1sdp"
         android:background="@color/black"
         android:alpha="0.1"
         app:layout_constraintTop_toBottomOf="@id/close_button"
         android:layout_marginTop="@dimen/_18sdp"/>
+
+    <androidx.appcompat.widget.AppCompatTextView
+        android:id="@+id/trip_cities_tv"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        tools:text="Алматы - Нур-Султан"
+        android:textColor="@color/black"
+        android:textStyle="bold"
+        app:layout_constraintTop_toBottomOf="@id/separator_line"
+        app:layout_constraintStart_toStartOf="parent"
+        android:layout_marginTop="@dimen/_10sdp"
+        android:layout_marginStart="@dimen/_15sdp"/>
+
+    <androidx.appcompat.widget.AppCompatTextView
+        android:id="@+id/trip_time"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textSize="@dimen/_9sdp"
+        android:textColor="#8B98A7"
+        app:layout_constraintStart_toStartOf="@+id/trip_cities_tv"
+        app:layout_constraintTop_toBottomOf="@+id/trip_cities_tv"
+        android:layout_marginTop="@dimen/_2sdp"
+        tools:text="13ч 30мин в пути" />
+
+    <androidx.appcompat.widget.AppCompatTextView
+        android:id="@+id/trip_number"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textSize="@dimen/_9sdp"
+        android:textColor="#8B98A7"
+        app:layout_constraintStart_toStartOf="@+id/trip_time"
+        app:layout_constraintTop_toBottomOf="@+id/trip_time"
+        android:layout_marginTop="@dimen/_15sdp"
+        tools:text="Рейс №23" />
+
+    <androidx.appcompat.widget.AppCompatTextView
+        android:id="@+id/trip_ferrymen"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textColor="@color/black"
+        android:textStyle="bold"
+        android:layout_marginTop="@dimen/_2sdp"
+        android:textSize="@dimen/_10sdp"
+        app:layout_constraintStart_toStartOf="@+id/trip_number"
+        app:layout_constraintTop_toBottomOf="@+id/trip_number"
+        tools:text="Перевозчик: Автовокзал Алматы" />
+
+    <androidx.appcompat.widget.AppCompatTextView
+        android:id="@+id/trip_time_from_city"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textColor="@color/black"
+        android:textStyle="bold"
+        android:textSize="@dimen/_12sdp"
+        android:layout_marginTop="@dimen/_10sdp"
+        app:layout_constraintStart_toStartOf="@+id/trip_ferrymen"
+        app:layout_constraintTop_toBottomOf="@+id/trip_ferrymen"
+        tools:text="09:00" />
+
+    <androidx.appcompat.widget.AppCompatTextView
+        android:id="@+id/trip_date_from"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textSize="@dimen/_8sdp"
+        android:textColor="@color/black"
+        app:layout_constraintEnd_toEndOf="@+id/trip_time_from_city"
+        app:layout_constraintStart_toStartOf="@+id/trip_time_from_city"
+        app:layout_constraintTop_toBottomOf="@+id/trip_time_from_city"
+        tools:text="12 марта" />
+
+    <androidx.appcompat.widget.AppCompatImageView
+        android:id="@+id/appCompatImageView6"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="@dimen/_15sdp"
+        android:src="@drawable/ic_from_city"
+        app:layout_constraintStart_toEndOf="@+id/trip_time_from_city"
+        app:layout_constraintTop_toTopOf="@+id/trip_time_from_city" />
+
+    <View
+        android:id="@+id/view9"
+        android:layout_width="@dimen/_2sdp"
+        android:layout_height="@dimen/_30sdp"
+        android:layout_marginTop="@dimen/_1sdp"
+        android:background="#446883"
+        app:layout_constraintEnd_toEndOf="@+id/appCompatImageView6"
+        app:layout_constraintStart_toStartOf="@+id/appCompatImageView6"
+        app:layout_constraintTop_toBottomOf="@+id/appCompatImageView6" />
+
+    <androidx.appcompat.widget.AppCompatImageView
+        android:id="@+id/appCompatImageView7"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="@dimen/_1sdp"
+        android:src="@drawable/ic_to_city"
+        app:layout_constraintEnd_toEndOf="@+id/view9"
+        app:layout_constraintStart_toStartOf="@+id/view9"
+        app:layout_constraintTop_toBottomOf="@+id/view9" />
+
+    <androidx.appcompat.widget.AppCompatTextView
+        android:id="@+id/trip_time_to_city"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textColor="@color/black"
+        android:textSize="@dimen/_12sdp"
+        android:textStyle="bold"
+        app:layout_constraintStart_toStartOf="@+id/trip_time_from_city"
+        app:layout_constraintTop_toBottomOf="@+id/view9"
+        tools:text="14:20" />
+
+    <androidx.appcompat.widget.AppCompatTextView
+        android:id="@+id/trip_date_to"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textSize="@dimen/_8sdp"
+        android:textColor="@color/black"
+        app:layout_constraintEnd_toEndOf="@+id/trip_time_to_city"
+        app:layout_constraintStart_toStartOf="@+id/trip_time_to_city"
+        app:layout_constraintTop_toBottomOf="@+id/trip_time_to_city"
+        tools:text="13 марта" />
+
+    <androidx.appcompat.widget.AppCompatTextView
+        android:id="@+id/from_city"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textAllCaps="true"
+        android:textColor="@color/black"
+        android:textStyle="bold"
+        android:layout_marginStart="@dimen/_15sdp"
+        app:layout_constraintStart_toEndOf="@+id/appCompatImageView6"
+        app:layout_constraintTop_toTopOf="@+id/appCompatImageView6"
+        tools:text="Алматы" />
+
+    <androidx.appcompat.widget.AppCompatTextView
+        android:id="@+id/to_city"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textAllCaps="true"
+        android:textColor="@color/black"
+        android:textStyle="bold"
+        android:layout_marginStart="@dimen/_15sdp"
+        app:layout_constraintStart_toEndOf="@+id/appCompatImageView7"
+        app:layout_constraintTop_toBottomOf="@+id/view9"
+        tools:text="Нур-Султан" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
