--- a/app/src/main/res/layout/fragment_bus_plan.xml
+++ b/app/src/main/res/layout/fragment_bus_plan.xml
@@ -162,6 +162,6 @@
             android:textSize="@dimen/_13sdp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/text_selected_seats_title" />
+            app:layout_constraintTop_toBottomOf="@+id/selected_seats" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
