--- a/app/src/main/res/layout/dialog_passenger_quantity.xml
+++ b/app/src/main/res/layout/dialog_passenger_quantity.xml
@@ -86,50 +86,16 @@
 
     </androidx.appcompat.widget.LinearLayoutCompat>
 
-    <View
-        android:id="@+id/button_plus_adult_tariff"
-        android:layout_width="@dimen/_21sdp"
-        android:layout_height="@dimen/_21sdp"
-        android:layout_marginEnd="@dimen/_13sdp"
-        android:textSize="@dimen/_11sdp"
-        android:shadowColor="@color/black"
-        android:background="@drawable/ic_quantity_button"
-        android:gravity="center"
-        android:textColor="@color/black"
-        app:layout_constraintBottom_toBottomOf="@+id/view"
-        app:layout_constraintEnd_toEndOf="@+id/view"
-        app:layout_constraintTop_toTopOf="@+id/view"/>
-
-    <View
+    <androidx.appcompat.widget.AppCompatTextView
         android:id="@+id/button_minus_adult_tariff"
         android:layout_width="@dimen/_21sdp"
         android:layout_height="@dimen/_21sdp"
-        android:background="@drawable/ic_quantity_button"
+        android:text="—"
         android:gravity="center"
-        android:shadowColor="@color/black"
-        android:textColor="@color/black"
         android:layout_marginEnd="@dimen/_25sdp"
         app:layout_constraintBottom_toBottomOf="@+id/view"
         app:layout_constraintEnd_toStartOf="@+id/button_plus_adult_tariff"
         app:layout_constraintTop_toTopOf="@+id/view" />
-
-    <ImageView
-        android:layout_width="@dimen/_8sdp"
-        android:layout_height="0dp"
-        android:src="@drawable/ic_minus"
-        app:layout_constraintBottom_toBottomOf="@+id/button_minus_adult_tariff"
-        app:layout_constraintEnd_toEndOf="@+id/button_minus_adult_tariff"
-        app:layout_constraintStart_toStartOf="@+id/button_minus_adult_tariff"
-        app:layout_constraintTop_toTopOf="@+id/button_minus_adult_tariff" />
-
-    <ImageView
-        android:layout_width="@dimen/_8sdp"
-        android:layout_height="0dp"
-        android:src="@drawable/ic_plus"
-        app:layout_constraintBottom_toBottomOf="@+id/button_plus_adult_tariff"
-        app:layout_constraintEnd_toEndOf="@+id/button_plus_adult_tariff"
-        app:layout_constraintStart_toStartOf="@+id/button_plus_adult_tariff"
-        app:layout_constraintTop_toTopOf="@+id/button_plus_adult_tariff" />
 
     <androidx.appcompat.widget.AppCompatTextView
         android:id="@+id/text_adult_quantity"
@@ -143,6 +109,17 @@
         app:layout_constraintEnd_toStartOf="@+id/button_plus_adult_tariff"
         app:layout_constraintStart_toEndOf="@+id/button_minus_adult_tariff"
         app:layout_constraintTop_toTopOf="@+id/button_minus_adult_tariff" />
+
+    <androidx.appcompat.widget.AppCompatTextView
+        android:id="@+id/button_plus_adult_tariff"
+        android:layout_width="@dimen/_21sdp"
+        android:layout_height="@dimen/_21sdp"
+        android:layout_marginEnd="@dimen/_13sdp"
+        android:text="+"
+        android:gravity="center"
+        app:layout_constraintBottom_toBottomOf="@+id/view"
+        app:layout_constraintEnd_toEndOf="@+id/view"
+        app:layout_constraintTop_toTopOf="@+id/view"/>
 
     <View
         android:id="@+id/view2"
@@ -179,50 +156,16 @@
 
     </androidx.appcompat.widget.LinearLayoutCompat>
 
-    <View
-        android:id="@+id/button_plus_child_tariff"
-        android:layout_width="@dimen/_21sdp"
-        android:layout_height="@dimen/_21sdp"
-        android:layout_marginEnd="@dimen/_13sdp"
-        android:textSize="15sp"
-        android:shadowColor="@color/black"
-        android:background="@drawable/ic_quantity_button"
-        android:gravity="center"
-        android:textColor="@color/black"
-        app:layout_constraintBottom_toBottomOf="@+id/view2"
-        app:layout_constraintEnd_toEndOf="@+id/view2"
-        app:layout_constraintTop_toTopOf="@+id/view2"/>
-
-    <View
+    <androidx.appcompat.widget.AppCompatTextView
         android:id="@+id/button_minus_child_tariff"
         android:layout_width="@dimen/_21sdp"
         android:layout_height="@dimen/_21sdp"
-        android:background="@drawable/ic_quantity_button"
         android:gravity="center"
-        android:shadowColor="@color/black"
-        android:textColor="@color/black"
+        android:text="—"
         android:layout_marginEnd="@dimen/_25sdp"
         app:layout_constraintBottom_toBottomOf="@+id/view2"
         app:layout_constraintEnd_toStartOf="@+id/button_plus_child_tariff"
         app:layout_constraintTop_toTopOf="@+id/view2" />
-
-    <ImageView
-        android:layout_width="@dimen/_8sdp"
-        android:layout_height="0dp"
-        android:src="@drawable/ic_minus"
-        app:layout_constraintBottom_toBottomOf="@+id/button_minus_child_tariff"
-        app:layout_constraintEnd_toEndOf="@+id/button_minus_child_tariff"
-        app:layout_constraintStart_toStartOf="@+id/button_minus_child_tariff"
-        app:layout_constraintTop_toTopOf="@+id/button_minus_child_tariff" />
-
-    <ImageView
-        android:layout_width="@dimen/_8sdp"
-        android:layout_height="0dp"
-        android:src="@drawable/ic_plus"
-        app:layout_constraintBottom_toBottomOf="@+id/button_plus_child_tariff"
-        app:layout_constraintEnd_toEndOf="@+id/button_plus_child_tariff"
-        app:layout_constraintStart_toStartOf="@+id/button_plus_child_tariff"
-        app:layout_constraintTop_toTopOf="@+id/button_plus_child_tariff" />
 
     <androidx.appcompat.widget.AppCompatTextView
         android:id="@+id/text_child_quantity"
@@ -236,6 +179,17 @@
         app:layout_constraintEnd_toStartOf="@+id/button_plus_child_tariff"
         app:layout_constraintStart_toEndOf="@+id/button_minus_child_tariff"
         app:layout_constraintTop_toTopOf="@+id/button_plus_child_tariff" />
+
+    <androidx.appcompat.widget.AppCompatTextView
+        android:id="@+id/button_plus_child_tariff"
+        android:layout_width="@dimen/_21sdp"
+        android:layout_height="@dimen/_21sdp"
+        android:layout_marginEnd="@dimen/_13sdp"
+        android:text="+"
+        android:gravity="center"
+        app:layout_constraintBottom_toBottomOf="@+id/view2"
+        app:layout_constraintEnd_toEndOf="@+id/view2"
+        app:layout_constraintTop_toTopOf="@+id/view2"/>
 
     <View
         android:id="@+id/view3"
@@ -272,49 +226,16 @@
 
     </androidx.appcompat.widget.LinearLayoutCompat>
 
-    <View
-        android:id="@+id/button_plus_disable_tariff"
-        android:layout_width="@dimen/_21sdp"
-        android:layout_height="@dimen/_21sdp"
-        android:layout_marginEnd="@dimen/_13sdp"
-        android:shadowColor="@color/black"
-        android:background="@drawable/ic_quantity_button"
-        android:gravity="center"
-        android:textColor="@color/black"
-        app:layout_constraintBottom_toBottomOf="@+id/view3"
-        app:layout_constraintEnd_toEndOf="@+id/view3"
-        app:layout_constraintTop_toTopOf="@+id/view3"/>
-
-    <View
+    <androidx.appcompat.widget.AppCompatTextView
         android:id="@+id/button_minus_disable_tariff"
         android:layout_width="@dimen/_21sdp"
         android:layout_height="@dimen/_21sdp"
-        android:background="@drawable/ic_quantity_button"
         android:gravity="center"
-        android:shadowColor="@color/black"
-        android:textColor="@color/black"
+        android:text="—"
         android:layout_marginEnd="@dimen/_25sdp"
         app:layout_constraintBottom_toBottomOf="@+id/view3"
         app:layout_constraintEnd_toStartOf="@+id/button_plus_disable_tariff"
         app:layout_constraintTop_toTopOf="@+id/view3" />
-
-    <ImageView
-        android:layout_width="@dimen/_8sdp"
-        android:layout_height="0dp"
-        android:src="@drawable/ic_minus"
-        app:layout_constraintBottom_toBottomOf="@+id/button_minus_disable_tariff"
-        app:layout_constraintEnd_toEndOf="@+id/button_minus_disable_tariff"
-        app:layout_constraintStart_toStartOf="@+id/button_minus_disable_tariff"
-        app:layout_constraintTop_toTopOf="@+id/button_minus_disable_tariff" />
-
-    <ImageView
-        android:layout_width="@dimen/_8sdp"
-        android:layout_height="0dp"
-        android:src="@drawable/ic_plus"
-        app:layout_constraintBottom_toBottomOf="@+id/button_plus_disable_tariff"
-        app:layout_constraintEnd_toEndOf="@+id/button_plus_disable_tariff"
-        app:layout_constraintStart_toStartOf="@+id/button_plus_disable_tariff"
-        app:layout_constraintTop_toTopOf="@+id/button_plus_disable_tariff" />
 
     <androidx.appcompat.widget.AppCompatTextView
         android:id="@+id/text_disable_quantity"
@@ -328,6 +249,17 @@
         app:layout_constraintEnd_toStartOf="@+id/button_plus_disable_tariff"
         app:layout_constraintStart_toEndOf="@+id/button_minus_disable_tariff"
         app:layout_constraintTop_toTopOf="@+id/button_plus_disable_tariff" />
+
+    <androidx.appcompat.widget.AppCompatTextView
+        android:id="@+id/button_plus_disable_tariff"
+        android:layout_width="@dimen/_21sdp"
+        android:layout_height="@dimen/_21sdp"
+        android:layout_marginEnd="16dp"
+        android:text="+"
+        android:gravity="center"
+        app:layout_constraintBottom_toBottomOf="@+id/view3"
+        app:layout_constraintEnd_toEndOf="@+id/view3"
+        app:layout_constraintTop_toTopOf="@+id/view3" />
 
     <androidx.appcompat.widget.AppCompatButton
         android:id="@+id/continue_button"
