--- a/app/src/main/res/layout/fragment_passenger_data.xml
+++ b/app/src/main/res/layout/fragment_passenger_data.xml
@@ -6,168 +6,160 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:background="@color/gray_background">
 
-    <androidx.appcompat.widget.AppCompatImageView
-        android:id="@+id/back_button"
-        android:layout_width="wrap_content"
+    <androidx.core.widget.NestedScrollView
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:src="@drawable/ic_button_back"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        android:layout_marginTop="21dp"
-        android:layout_marginStart="24dp"/>
-
-    <androidx.appcompat.widget.AppCompatTextView
-        android:id="@+id/title_passenger_data"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="@string/title_passenger_data"
-        app:layout_constraintStart_toEndOf="@id/back_button"
-        app:layout_constraintTop_toTopOf="@id/back_button"
-        app:layout_constraintBottom_toBottomOf="@id/back_button"
-        android:layout_marginStart="16dp"
-        android:textSize="20sp"
-        android:textColor="@color/bolder_text"
-        android:textStyle="bold"/>
-
-    <androidx.constraintlayout.widget.ConstraintLayout
-        android:id="@+id/trip_layout"
-        android:layout_width="match_parent"
-        android:layout_height="90dp"
-        android:layout_marginTop="42dp"
-        android:layout_marginStart="15dp"
-        android:layout_marginEnd="15dp"
-        android:background="@drawable/ic_details_layout"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/title_passenger_data">
-
-    <androidx.appcompat.widget.AppCompatTextView
-        android:id="@+id/trip_number"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="@string/trip_number"
-        app:layout_constraintTop_toTopOf="@id/trip_layout"
-        app:layout_constraintStart_toStartOf="@id/trip_layout"
-        android:layout_marginStart="16dp"
-        android:layout_marginTop="12dp"
-        android:textColor="@color/black"/>
-
-    <androidx.appcompat.widget.AppCompatTextView
-        android:id="@+id/trip_destination"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        tools:text="Алматы - НурСултан"
-        app:layout_constraintTop_toTopOf="@id/trip_details_button"
-        app:layout_constraintStart_toStartOf="@id/trip_layout"
-        app:layout_constraintBottom_toBottomOf="@id/trip_details_button"
-        android:layout_marginStart="16dp"
-        android:layout_marginTop="4dp"
-        android:textColor="@color/bolder_text"
-        android:textStyle="bold"
-        android:textSize="17sp"/>
-
-    <androidx.appcompat.widget.AppCompatTextView
-        android:id="@+id/trip_date"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        tools:text="24.12.2021"
-        app:layout_constraintTop_toBottomOf="@id/trip_destination"
-        app:layout_constraintStart_toStartOf="@id/trip_layout"
-        android:layout_marginStart="16dp"
-        android:layout_marginTop="4dp"
-        android:textSize="11sp"/>
-
-    <androidx.appcompat.widget.AppCompatTextView
-        android:id="@+id/trip_start_time"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        tools:text="09:00"
-        app:layout_constraintTop_toBottomOf="@id/trip_destination"
-        app:layout_constraintStart_toEndOf="@id/trip_date"
-        android:layout_marginStart="9dp"
-        android:layout_marginTop="4dp"
-        android:textSize="11sp"/>
-
-        <androidx.appcompat.widget.AppCompatTextView
-            android:id="@+id/trip_details_button"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginEnd="32dp"
-            android:text="@string/details"
-            android:textColor="@color/blue_text"
-            android:textSize="13sp"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
-
-    </androidx.constraintlayout.widget.ConstraintLayout>
-
-    <androidx.recyclerview.widget.RecyclerView
-        android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:paddingHorizontal="15dp"
-        tools:listitem="@layout/item_passenger_data"
-        android:nestedScrollingEnabled="false"
-        app:layout_constraintTop_toBottomOf="@id/trip_layout"
-        app:layout_constraintBottom_toTopOf="@id/rules_layout"/>
-
-    <androidx.constraintlayout.widget.ConstraintLayout
-        android:id="@+id/rules_layout"
-        android:layout_width="0dp"
-        android:layout_height="125dp"
-        android:background="@drawable/ic_details_layout"
-        android:layout_marginStart="15dp"
-        android:layout_marginEnd="15dp"
-        android:layout_marginBottom="28dp"
-        android:paddingHorizontal="15dp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent">
 
-        <androidx.appcompat.widget.AppCompatTextView
-            android:id="@+id/rules_title"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            android:layout_marginTop="12dp"
-            android:text="@string/rules_title"
-            android:textSize="16sp"
-            android:textColor="@color/bolder_text"
-            android:textStyle="bold"/>
-
-        <androidx.appcompat.widget.AppCompatTextView
-            android:id="@+id/read_the_rules_text"
+        <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="8dp"
-            android:layout_marginEnd="60dp"
-            android:textColorLink="@color/blue_text"
-            android:text="@string/read_the_rules"
-            android:textSize="12sp"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/rules_title" />
+            android:layout_height="wrap_content">
 
-        <androidx.appcompat.widget.AppCompatCheckBox
-            android:id="@+id/accept_the_rules_checkbox"
-            android:layout_width="25dp"
-            android:layout_height="20dp"
-            android:layout_marginTop="12dp"
-            android:gravity="center"
-            app:layout_constraintTop_toBottomOf="@id/read_the_rules_text"
-            app:layout_constraintStart_toStartOf="parent"/>
+            <androidx.appcompat.widget.Toolbar
+                android:id="@+id/toolbar"
+                android:layout_width="match_parent"
+                android:background="@color/white"
+                android:layout_height="@dimen/_60sdp"
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintStart_toStartOf="parent">
 
-        <androidx.appcompat.widget.AppCompatTextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="@string/accept_the_rules"
-            android:layout_marginStart="16dp"
-            android:textSize="12sp"
-            app:layout_constraintBottom_toBottomOf="@+id/accept_the_rules_checkbox"
-            app:layout_constraintStart_toEndOf="@id/accept_the_rules_checkbox"
-            app:layout_constraintTop_toTopOf="@+id/accept_the_rules_checkbox" />
+                <androidx.appcompat.widget.AppCompatImageView
+                    android:id="@+id/back_button"
+                    android:layout_width="@dimen/_29sdp"
+                    android:layout_height="@dimen/_29sdp"
+                    android:src="@drawable/ic_button_back"
+                    app:layout_constraintTop_toTopOf="@id/toolbar"
+                    app:layout_constraintStart_toStartOf="@id/toolbar"
+                    android:layout_marginTop="@dimen/_16sdp"
+                    android:layout_marginStart="@dimen/_19sdp"/>
 
-    </androidx.constraintlayout.widget.ConstraintLayout>
+                <androidx.appcompat.widget.AppCompatTextView
+                    android:id="@+id/title"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="@string/title_passenger_data"
+                    app:layout_constraintStart_toEndOf="@id/back_button"
+                    app:layout_constraintTop_toTopOf="@id/back_button"
+                    app:layout_constraintBottom_toBottomOf="@id/back_button"
+                    android:layout_marginStart="@dimen/_12sdp"
+                    android:textSize="@dimen/_16sdp"
+                    android:textColor="@color/bolder_text"
+                    android:textStyle="bold"/>
+
+            </androidx.appcompat.widget.Toolbar>
+
+            <androidx.constraintlayout.widget.ConstraintLayout
+                android:id="@+id/trip_layout"
+                android:layout_width="match_parent"
+                android:layout_height="@dimen/_76sdp"
+                android:layout_marginTop="@dimen/_14sdp"
+                android:layout_marginStart="@dimen/_12sdp"
+                android:layout_marginEnd="@dimen/_12sdp"
+                android:background="@drawable/ic_details_layout"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@id/toolbar">
+
+                <androidx.appcompat.widget.AppCompatTextView
+                    android:id="@+id/trip_number"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="@string/trip_number"
+                    android:textSize="@dimen/_10sdp"
+                    app:layout_constraintTop_toTopOf="@id/trip_layout"
+                    app:layout_constraintStart_toStartOf="@id/trip_layout"
+                    android:layout_marginStart="@dimen/_12sdp"
+                    android:layout_marginTop="@dimen/_10sdp"
+                    android:textColor="@color/black"/>
+
+                <androidx.appcompat.widget.AppCompatTextView
+                    android:id="@+id/trip_destination"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="@dimen/_3sdp"
+                    android:textColor="@color/bolder_text"
+                    android:textSize="@dimen/_13sdp"
+                    android:textStyle="bold"
+                    app:layout_constraintBottom_toBottomOf="@id/trip_details_button"
+                    app:layout_constraintStart_toStartOf="@+id/trip_number"
+                    app:layout_constraintTop_toTopOf="@id/trip_details_button"
+                    tools:text="Алматы - НурСултан" />
+
+                <androidx.appcompat.widget.AppCompatTextView
+                    android:id="@+id/trip_date"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="@dimen/_2sdp"
+                    android:textSize="@dimen/_8sdp"
+                    app:layout_constraintStart_toStartOf="@+id/trip_destination"
+                    app:layout_constraintTop_toBottomOf="@id/trip_destination"
+                    tools:text="24.12.2021" />
+
+                <androidx.appcompat.widget.AppCompatTextView
+                    android:id="@+id/trip_start_time"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:textSize="@dimen/_8sdp"
+                    android:layout_marginStart="@dimen/_5sdp"
+                    app:layout_constraintStart_toEndOf="@+id/trip_date"
+                    app:layout_constraintTop_toTopOf="@+id/trip_date"
+                    tools:text="09:00" />
+
+                <androidx.appcompat.widget.AppCompatTextView
+                    android:id="@+id/trip_details_button"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginEnd="@dimen/_24sdp"
+                    android:text="@string/details"
+                    android:textColor="@color/blue_text"
+                    android:textSize="13sp"
+                    app:layout_constraintBottom_toBottomOf="parent"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintTop_toTopOf="parent" />
+
+            </androidx.constraintlayout.widget.ConstraintLayout>
+
+            <androidx.recyclerview.widget.RecyclerView
+                android:id="@+id/recycler_view"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                app:layout_constraintTop_toBottomOf="@id/trip_layout"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                android:layout_marginStart="@dimen/_12sdp"
+                android:layout_marginEnd="@dimen/_12sdp"
+                android:layout_marginTop="@dimen/_14sdp"
+                tools:listitem="@layout/item_passenger_data"
+                tools:itemCount="2"/>
+
+        </androidx.constraintlayout.widget.ConstraintLayout>
+
+    </androidx.core.widget.NestedScrollView>
+
+    <androidx.appcompat.widget.AppCompatImageView
+        android:id="@+id/bottom_sheet"
+        android:layout_width="match_parent"
+        android:layout_height="@dimen/_70sdp"
+        android:scaleType="fitXY"
+        android:src="@drawable/bottom_sheet_dialog_frame"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent" />
+
+    <androidx.appcompat.widget.AppCompatButton
+        android:id="@+id/continue_button"
+        android:layout_width="@dimen/_270sdp"
+        android:layout_height="@dimen/_40sdp"
+        android:background="@drawable/ic_button_layout"
+        android:text="@string/continue_button"
+        android:layout_marginTop="@dimen/_12sdp"
+        android:textAllCaps="false"
+        android:textColor="@color/white"
+        android:textSize="@dimen/_13sdp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintBottom_toBottomOf="@id/bottom_sheet"
+        app:layout_constraintTop_toTopOf="@id/bottom_sheet" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
