--- a/app/src/main/res/navigation/nav_buy_tickets.xml
+++ b/app/src/main/res/navigation/nav_buy_tickets.xml
@@ -91,7 +91,19 @@
         <argument
             android:name="trip_type"
             app:argType="string"/>
+        <action
+            android:id="@+id/action_navigation_bus_plan_to_passengerDataFragment"
+            app:destination="@id/passengerDataFragment"
+            app:popEnterAnim="@anim/slide_in_left"
+            app:popExitAnim="@anim/slide_out_right"
+            app:enterAnim="@anim/slide_in_right"
+            app:exitAnim="@anim/slide_out_left"/>
 
     </fragment>
+    <fragment
+        android:id="@+id/passengerDataFragment"
+        android:name="kz.busjol.ui.passenger_data.PassengerDataFragment"
+        android:label="PassengerDataFragment"
+        tools:layout="@layout/fragment_passenger_data"/>
 
 </navigation>
